# transitsync-routing

./: .gitignore  README.md  events_sample.json  main_cli.py  pyproject.toml  setup.py  test_cli.sh
.github/workflows/: tests.yml
tests/: test_api_client.py  test_event.py  test_route_planner.py  test_stop.py
transitsync_routing/: __init__.py  api_client.py  calendar_event.py  config.py  event.py  route_planner.py  stop.py
