[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transitsync-routing"
version = "0.1.0"
description = "GTFS-based transit route planning for Wellington using Metlink and OpenStreetMap."
authors = [
    { name="Hamish Burke", email="hamishapps@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

dependencies = [
    "requests",
    "pytz"
]

[project.urls]
"Homepage" = "https://github.com/Slaymish/transitsync-routing"
"Bug Tracker" = "https://github.com/Slaymish/transitsync-routing/issues"

[tool.setuptools]
packages = ["transitsync_routing"]